--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "AhmedMohamed",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
